# basnijholt

./: .gitattributes  .gitignore  README.jinja2  README.md  environment.yml  generate_data.py  main.py  pyproject.toml  requirements.txt  update-readme.ipynb
.github/workflows/: run-notebook.yml
