[project]
name = "basnijholt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "gidgethub>=5.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "mplcyberpunk>=0.7.6",
    "notebook>=7.4.7",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
